Fixed row spacing

--- a/divisions/css/_department-LP-styles.scss
+++ b/divisions/css/_department-LP-styles.scss
@@ -383,3 +383,7 @@ h3 {
 a {
 	text-decoration: none;
 }
+
+.row {
+	margin-bottom: 4em;
+}
